Fix school expand/collapse

--- a/app/assets/stylesheets/joel.scss
+++ b/app/assets/stylesheets/joel.scss
@@ -311,7 +311,7 @@ h4.alert {
   font-size: 100px;
   position: relative;
   margin-left: 12px;
-  margin-top: -34px;
+  margin-top: -30px;
   float: left;
   height: 100px;
 }
